# weather

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/arguments/: data_storage.rs  mod.rs  production_data_storage.rs
src/processor/: dependency_factory.rs  mod.rs  production_dependency_factory.rs
src/provider/: accu_weather.rs  mod.rs  open_weather.rs  production_provider_factory.rs  provider_factory.rs
tests/: processor_tests.rs
