[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Ed Burmai"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
string-error = "0.1.0"
chrono = "0.4.23"

[dev-dependencies]
mockall = "0.11.2"